remove many manual model view/edit templates with direct field templates, pull set_facets from fum into predecessor function

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -89,27 +89,28 @@ template(name='user_card')
 
 
 template(name='big_user_card')
-    .ui.card
-        .image
-            img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
-        .content
-            .header #{first_name} #{last_name} 
-            .meta @#{username}
-        if is_admin
+    with user
+        .ui.card
+            .image
+                img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
             .content
-                div #{address}
-                strong #{building_number}
-                strong ##{apt_number}
-                div start 
-                    strong #{start_date}
-                div expiration 
-                    strong #{lease_expiration}
-                +icolor name='swimming-pool' classes='ui avatar image'
-                +icolor name='weightlift' classes='ui avatar image'
-                +icolor name='jacuzzi' classes='ui avatar image'
-                +icolor name='shower' classes='ui avatar image'
-                +icolor name='racquetball' classes='ui avatar image'
-                +icolor name='water-steam' classes='ui avatar image'
+                .header #{first_name} #{last_name} 
+                .meta @#{username}
+            if is_admin
+                .content
+                    div #{address}
+                    strong #{building_number}
+                    strong ##{apt_number}
+                    div start 
+                        strong #{start_date}
+                    div expiration 
+                        strong #{lease_expiration}
+                    +icolor name='swimming-pool' classes='ui avatar image'
+                    +icolor name='weightlift' classes='ui avatar image'
+                    +icolor name='jacuzzi' classes='ui avatar image'
+                    +icolor name='shower' classes='ui avatar image'
+                    +icolor name='racquetball' classes='ui avatar image'
+                    +icolor name='water-steam' classes='ui avatar image'
 
 
 
