--- a/client/nav.jade
+++ b/client/nav.jade
@@ -26,9 +26,9 @@ template(name='nav')
                         a.item(href='/admin' class="{{isActivePath '/admin'}}")
                             i.large.shield.icon
                     if is_dev
-                        a.item(href='/m/model' class="{{isActivePath '/m/model'}}")
+                        a.icon.item(href='/m/model' class="{{isActivePath '/m/model'}}")
                             i.large.yin.yang.icon
-                    a.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
+                    a.icon.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
                         if currentUser.image_id
                             img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
                         else
