scrolling in delta columns, update author_id to _author_id

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -511,7 +511,7 @@ template(name='boolean_edit')
     .ui.inline.small.grey.header
         if icon
             i.grey.icon(class=icon)
-        | #{title} #{title}
+        | #{title}
     .ui.button.toggle_boolean(class=boolean_toggle_class)
         if field_value
             |Yes
