am/pm hour and minute in timestamp tags, auto-add timestamp tags to facets, show inline in result_card and doc_view

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -131,7 +131,7 @@ template(name='author_info')
     a.ui.button(href="/user/#{_id}/about") by #{author.profile.name}
 
 template(name='creation_info')
-    .ui.header #{when}
+    .uismall.grey.inline.header #{when}
 
 
 template(name='user_list_toggle')
