--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -45,6 +45,9 @@ template(name='model_doc_view')
                     if can_edit
                         a.ui.big.blue.circular.icon.button(href="/m/#{model}/#{_id}/edit")
                             i.pencil.icon
+                    .ui.small.header timestamp tags
+                    each _timestamp_tags
+                        .ui.label #{this}
                     each model.actions
                         +Template.dynamic template=this data=current_doc
                     // +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
