--- a/client/nav.jade
+++ b/client/nav.jade
@@ -13,7 +13,7 @@ template(name='nav')
                 i.large.users.icon
             a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
                 i.large.briefcase.icon
-            a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
+            a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
                 i.large.clinic.medical.icon
         .right.menu
             if currentUser
